--- a/index2.html
+++ b/index2.html
@@ -36,7 +36,7 @@
         <td>11:00 am</td>
       </tr>
       <tr>
-        <td>Brian's Haricut</td>
+        <td>Brian's Haircut</td>
         <td>October 11, 2022</td>
         <td>5:30 pm</td>
       </tr>
